# rust-builder

./: Cargo.toml  rustfmt.toml
.github/workflows/: ci.yml
.github/workflows/actions/rust-toolchain/: action.yml
etc/: config.yaml
src/: args.rs  config.rs  git.rs  main.rs  opts.rs  server.rs
