[package]
name = "rust-builder"
version = "0.1.0"
authors = ["Continuum Trading"]
edition = "2021"
readme = "README.md"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
clap_complete = "4.3.0"
dotenvy = "0.15.7"
git2 = "0.18.2"
hex = "0.4.3"
infra = { git = "https://github.com/continuum-trading/infra" }
reqwest = { version = "0.11.24", features = ["multipart", "stream"] }
tokio = { version = "1.28.2", features = ["full"] }
tokio-util = "0.7.10"
tracing = "0.1.37"

[build-dependencies]
vergen = { version = "8.2.1", features = ["build", "git", "git2", "rustc", "cargo"] }

[profile.release]
opt-level = 3
debug = true
overflow-checks = true
debug-assertions = true

[profile.performance]
inherits = "release"
overflow-checks = false
debug-assertions = false
lto = "fat"
codegen-units = 1
incremental = false
