[package]
name = "rust-builder"
version = "0.1.0"
authors = ["Continuum Trading"]
edition = "2021"
readme = "README.md"

[lints.clippy]
# See `clippy.toml`.
disallowed_methods = "warn"
match_bool = "allow"
missing_const_for_fn = "warn"
module_name_repetitions = "allow"
pedantic = { level = "warn", priority = -1 }
single_match_else = "allow"
trivially_copy_pass_by_ref = "warn"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.2.7", features = ["derive"] }
clap_complete = "4.3.0"
dotenvy = "0.15.7"
git2 = "0.18.2"
hashbrown = "0.14.5"
hex = "0.4.3"
reqwest = { version = "0.11.24", features = ["multipart", "stream"] }
resolve-path = "0.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_with = { version = "3.11.0", features = ["hashbrown_0_14"] }
serde_yaml = "0.9.34"
tokio = { version = "1.28.2", features = ["full"] }
tokio-util = "0.7.10"
toolbox = { git = "https://github.com/OliverNChalk/toolbox-rs", version = "0.2.0", features = [
  "tracing",
  "version",
] }
tracing = "0.1.37"

[build-dependencies]
vergen = { version = "8.2.1", features = ["build", "git", "git2", "rustc", "cargo"] }

[profile.release]
opt-level = 3
debug = true

[profile.paranoid]
inherits = "release"
overflow-checks = true
debug-assertions = true

[profile.performance]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
